# claude-ops-investigator

./: .bobignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  INVESTIGATION_PLAN.md  README.md  pyproject.toml
.bob/: custom_modes.yaml
.bob/commands/: investigate-incident.md  propose-fix.md
.bob/rules-fix-proposer/: 00-rules.md
.bob/rules-incident-reporter/: 00-rules.md
.bob/rules-k8s-evidence-collector/: 00-rules.md
.bob/rules-log-analyst/: 00-rules.md
.bob/rules-ops-investigator/: evidence-ref-discipline.md  prometheus-connectivity.md  read-only-safety.md  scratchpad-and-briefs.md  symptom-driven-tool-choice.md  unrelated-log-noise.md
.bob/rules-orchestrator/: 00-workflow.md  01-structured-finding-brief.md  02-symptom-routing.md  03-fix-proposal-gate.md
.bob/rules-prometheus-analyst/: 00-rules.md
.bob/rules-runbook-analyst/: 00-rules.md
.claude/: settings.json
.claude/agents/: incident-coordinator.md  incident-reporter.md  k8s-evidence-collector.md  log-analyst.md  prometheus-analyst.md  runbook-analyst.md
.claude/commands/: investigate-incident.md
.claude/hooks/: audit_mcp_tool_call.py  audit_subagent_lifecycle.py  block_unsafe_shell.py  (+1 more)
data/: runbook_index.json  service_catalog.json
docs/: bob-harness.md
k8s/: readonly-rbac.yaml
scripts/: mcp_smoke_client.py
tests/: test_env_config.py  test_evidence_store.py  test_hooks.py  test_ibm_logs_tools.py  test_k8s_tools.py  test_mcp_server.py  test_prometheus_preflight.py  test_prometheus_tools.py  test_runbook_tools.py  test_schema.py  test_summarizers.py
(+27 files in other folders)
